--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,94 @@
-/* mobile screen style */
+* {
+  margin: 0;
+  padding: 0;
+}
 
+:root {
+  box-sizing: border-box;
+  --gray-color: #e4e4e4;
+  --gray-two: #cccccc;
+  --gray-three: #333333;
+  --black-one: #131313;
+  --black-two: #42424210;
+  --orange-color: #e43500;
+}
+
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: sans-serif;
+}
+
+img {
+  width: 100%;
+}
+
+/* mobile screen style */
+.header-page{
+  display: grid;
+  grid-template-columns: 6.5rem 1fr;
+}
+
+.logo-navbar {
+  background-color: var(--black-one);
+}
+
+.logo-navbar:hover {
+  background-image: url(assets/home-1.gif);
+}
+
+.logo-image {
+  padding: 0.8rem;
+}
+
+.top-navbar {
+  display: none;
+}
+
+.bottom-navbar-list {
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
+
+.bottom-navbar-list li + li {
+  border-left: 1px solid var(--gray-two);
+}
+
+.icons-navbar-1 {
+  color: var(--gray-two);
+  font-size: 1rem;
+  padding: 0.83rem;
+}
+
+.icons-navbar-1:hover {
+  color: var(--gray-three);
+}
+
+.icons-navbar-2 {
+  color: var(--orange-color);
+  font-size: 2rem;
+  padding: 0.355rem;
+}
+
+.display-flex {
+  display: flex;
+}
+
+.margin-left-auto {
+  margin-left: auto;
+}
 
 /* tablet screen style */
 @media screen and (min-width: 768px) {
-    
+
 }
 
 /* desktop screen style */
 @media screen and (min-width: 1024px) {
-    
+
 }
