--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -10,6 +12,7 @@
   --gray-three: #333333;
   --black-one: #131313;
   --black-two: #42424210;
+  --transparent-white: #ffffff00;
   --orange-color: #e43500;
 }
 
@@ -81,6 +84,89 @@ img {
 
 .margin-left-auto {
   margin-left: auto;
+}
+
+.without-style-button {
+  background-color: white;
+  border: none;
+}
+
+.firts-section {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 136px);
+  grid-gap: 0.5rem;
+  margin: 0.5rem;
+}
+
+.firts-article-firts-section {
+  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
+  url(assets/pic-1-firts-section.jpg);
+  background-size: cover;
+  background-position: 50%;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.second-article-firts-section {
+  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
+  url(assets/pic-2-firts-section.jpg);
+  background-size: cover;
+  background-position: 50%;
+  cursor: pointer;
+}
+
+.third-article-firts-section {
+  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
+  url(assets/pic-3-firts-section.webp);
+  background-size: cover;
+  background-position: 50%;
+  cursor: pointer;
+}
+
+.transition-hover {
+  transition: .4s ease;
+  opacity: 1;
+  will-change: opacity;
+}
+
+.transition-hover:hover {
+  opacity: 0.95;
+}
+
+.margin-top-auto {
+  margin-top: auto;
+}
+
+.title-firts-article-firts-section {
+  color: white;
+  text-decoration: none;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.padding-1 {
+  padding: 0.7rem;
+}
+
+.subtitle-firts-article-firts-section {
+  color: var(--gray-two);
+}
+
+.subtitle-firts-article-firts-section-a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+.subtitle-firts-article-firts-section-a {
+  color: var(--gray-two);
+}
+
+.text-decoration-none {
+  text-decoration: none;
+}
+
+.padding-bottom-dot-2 {
+  padding-bottom: 0.2rem;
 }
 
 /* tablet screen style */
