--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1169,7 +1169,7 @@ img {
   .second-section {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 3fr 3fr 3fr;
-    grid-template-areas: 
+    grid-template-areas:
     "title-second-section title-second-section title-second-section"
     "firts-article-second-section second-article-second-section third-article-second-section"
     "fourth-article-second-section fifth-article-second-section sixth-article-second-section"
@@ -1575,11 +1575,22 @@ img {
   }
 
   .title-firts-article-firts-section {
-    font-size: 2.9rem;
+    font-size: 2.5rem;
   }
 
   .title-second-article-firts-section {
     font-size: 1.5rem;
+  }
+
+  .second-section {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 3fr 3fr;
+    grid-template-areas:
+    "title-second-section title-second-section title-second-section title-second-section"
+    "firts-article-second-section second-article-second-section third-article-second-section fourth-article-second-section"
+    "fifth-article-second-section sixth-article-second-section seventh-article-second-section eighth-article-second-section";
+    max-width: 1152px;
+    margin: auto;
   }
 
 }
